# jupyter-notebook-simple-review

./: .gitignore  LICENSE  README.md  install.json  jest.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
jupyter_notebook_simple_review/: __init__.py
jupyter_notebook_simple_review/labextension/: package.json
jupyter_notebook_simple_review/labextension/static/: 509.50423d0274a65d4c50f5.js  509.cd9e326cf019efba93be.js  728.de40a372ebb04e088f42.js  remoteEntry.6bb9ff1ee711e338cb72.js  remoteEntry.a9198b1ff013f3e11586.js  style.js
src/: commentWidget.ts  highlight.ts  index.ts  model.ts  types.ts
src/__tests__/: model.test.ts
style/: base.css  index.js
